# cookbook

./: .gitignore  README.md  my-agent.agent.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.agentx/: README.md  access_profiles.json  agents.json  rules.md
.github/: CODEOWNERS
.github/agents/: BuildFixGoon.agent.md  FrenFrontendGoon.agent.md  GoonOverlord.agent.md  GoonSolidityMaster.agent.md  MemeLordAgent.agent.md  SolanaPaymentGoon.agent.md  TrenchTester.agent.md  my-agent.agent.md
.github/copilot/: setup-steps.yml
.github/workflows/: ci.yml  protect-main.yml
contracts/evm/: .env.example  .solhintrc.json  hardhat.config.ts  package.json  tsconfig.json
contracts/evm/scripts/: deploy.ts  deployBurnBridgeReceiver.ts  preflight.ts
contracts/evm/test/: TokenFactory.test.ts
contracts/solana/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contracts/solana/idl/: token_burn_bridge.json
contracts/solana/programs/token-burn-bridge/: Cargo.toml
contracts/solana/programs/token-burn-bridge/src/: lib.rs
contracts/solana/scripts/: deploy.ts
contracts/solana/tests/: token-burn-bridge.ts
docs/: CROSS_CHAIN_BURN_BRIDGE.md  DEPLOYMENT.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: AppShellClient.tsx  AuditReport.tsx  (+20 more)
shared/: package.json  tsconfig.json
shared/src/: index.ts  types.ts
(+49 files in other folders)
