[package]
name = "token-burn-bridge"
version = "0.1.0"
description = "TokenForge cross-chain burn-to-activate bridge (Solana side)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_burn_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang  = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.30.1", features = ["token", "associated_token"] }
